--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Doctor Appoinment Web Application</title>
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> 
+    </head>
 <body>
 
-<h1>My First Heading</h1>
+    <nav class="navbar bg-primary ">
+        <div class="container">
+          <a class="navbar-brand text-white">Doctor Appoinment App</a>
+          <form class="d-flex" role="search">
+            <button class="btn btn-outline-light" type="submit">Login</button>
+          </form>
+        </div>
+      </nav>
 
-<p>My first paragraph.</p>
 
+<!-- <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+<script src="node_modules/popper.js/dist/popper.min.js"></script> -->
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
