--- a/index.html
+++ b/index.html
@@ -2,25 +2,38 @@
 <html>
     <head>
         <title>Doctor Appoinment Web Application</title>
+        <!--build:css css/main.css -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css"> 
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"> 
-        <link rel="stylesheet" href="css/styles.css"> 
+        <link rel="stylesheet" href="css/styles.css">
+        <!--endbuild -->
     </head>
 <body>
 
-    <nav class="navbar ">
+    <nav class="navbar navbar-expand-lg bg-own">
         <div class="container">
-          <a class="navbar-brand text-white"><span class="fa fa-home fa-lg"></span> Home</a>
-          <form class="d-flex" role="search">
-            <button  id="#loginModal" type="button" class="btn btn-own" data-bs-toggle="modal" data-bs-target="#loginModal"><span class="fa fa-sign-in"></span> Login</button>
-          </form>
-          
+        <a class="navbar-brand text-white" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa fa-bars fa-lg text-white"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a href="account_doctor.html" class="btn btn-own me-2 mt-2 mb-2 ">Doctor Account</a>
+              </li>
+              <li class="nav-item">
+                <a href="account_patient.html" class="btn btn-own me-2 mt-2 mb-2">Patient Account</a>
+              </li>
+              <li class="nav-item">
+                <a  id="#loginModal" type="button" class="btn btn-own mt-2 mb-2" data-bs-toggle="modal" data-bs-target="#loginModal"><span class="fa fa-sign-in"></span> Login</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </nav>
+    </nav>
 
-     
-  
+   
   <!-- Modal -->
   <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleloginModal" aria-hidden="true">
     <div class="modal-dialog">
@@ -214,10 +227,10 @@
 
 
 
-<!-- <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-<script src="node_modules/popper.js/dist/popper.min.js"></script> -->
-<!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 
 </body>
 </html>
